I need to add the userlevel setting so that VZ can add the full preferences page set to the folder properties.

--- a/TODO
+++ b/TODO
@@ -145,6 +145,8 @@ for release:
 - do we really need to scan /var/lib/news/active?
 - more configurability for news
 
+- add user levels, so Vadim can add full preferences for folders
+
 doc: add note about news active file
 
 
